# server-query-win32

./: Cargo.toml  README.md
src/: main.rs
